--- a/assets/css/templatemo-chain-app-dev.css
+++ b/assets/css/templatemo-chain-app-dev.css
@@ -147,12 +147,12 @@ body {
 }
 
 ::selection {
-  background: #4b8ef1;
+  background: #FFA000;
   color: #fff !important;
 }
 
 ::-moz-selection {
-  background: #4b8ef1;
+  background: #FFA000;
   color: #fff !important;
 }
 
@@ -187,7 +187,7 @@ body {
 
 .section-heading h4 em {
   font-style: normal;
-  color: #4b8ef1;
+  color: #FFA000;
 }
 
 .section-heading img {
@@ -199,6 +199,18 @@ body {
   margin-top: 10px;
 }
 
+.section-heading a:link {
+  color: #ffa000;
+}
+
+.section-heading a:visited {
+  color: #ff5e00;
+}
+
+.section-heading a:hover {
+  color: #955f01;
+}
+
 .show-up {
   position: relative;
   z-index: 2;
@@ -207,7 +219,7 @@ body {
 .white-button a {
   display: inline-block !important;
   padding: 10px 20px !important;
-  color: #4b8ef1 !important;
+  color: #FFA000 !important;
   text-transform: capitalize;
   font-size: 15px;
   background-color: #fff;
@@ -223,7 +235,7 @@ body {
 }
 
 .white-button a:hover {
-  background-color: #4b8ef1;
+  background-color: #FFA000;
   color: #fff !important;
 }
 
@@ -247,8 +259,8 @@ body {
   color: #fff !important;
   text-transform: capitalize;
   font-size: 15px;
-  background: rgb(19,175,240);
-  background: linear-gradient(105deg, rgba(91,104,235,1) 0%, rgba(40,225,253,1) 100%);
+  background: rgb(240, 159, 19);
+  background: linear-gradient(105deg, rgb(255, 158, 12) 0%, rgb(236, 184, 78) 100%);
   border-radius: 23px;
   font-weight: 500 !important;
   letter-spacing: 0.3px !important;
@@ -257,15 +269,15 @@ body {
 
 .gradient-button a:hover {
   color: #fff !important;
-  background: rgb(19,175,240);
-  background: linear-gradient(105deg, rgba(91,104,235,1) 0%, rgba(40,225,253,1) 100%);
+  background: rgb(255, 140, 0);
+  background: linear-gradient(105deg, rgb(229, 143, 46) 0%, rgb(247, 186, 96) 100%);
 }
 
 .border-button a {
   display: inline-block !important;
   padding: 10px 20px !important;
-  color: #4b8ef1 !important;
-  border: 1px solid #4b8ef1;
+  color: #FFA000 !important;
+  border: 1px solid #FFA000;
   text-transform: capitalize;
   font-size: 15px;
   display: inline-block;
@@ -277,7 +289,7 @@ body {
 }
 
 .border-button a:hover {
-  background-color: #4b8ef1;
+  background-color: #FFA000;
   color: #fff !important;
 }
 
@@ -305,7 +317,7 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #4b8ef1;
+  color: #ffa000;
 }
 
 .background-header .nav li a.active {
@@ -317,7 +329,7 @@ header
   position: absolute;
   width: 100%;
   height: 1px;
-  background-color: #4b8ef1;
+  background-color: #ffa000;
   content: '';
   left: 50%;
   bottom: -20px;
@@ -353,6 +365,7 @@ header
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+  margin-top:5px;
 }
 
 .header-area .main-nav .logo {
@@ -428,7 +441,7 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #4b8ef1!important;
+  color: #ffa000!important;
 }
 
 .header-area .main-nav .nav li:last-child a.active {
@@ -437,7 +450,7 @@ header
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #4b8ef1!important;
+  color: #ffa000!important;
   opacity: 1;
 }
 
@@ -499,7 +512,7 @@ header
 
 .header-area .main-nav .nav li.submenu ul li a:hover {
   background: #fff;
-  color: #4b8ef1!important;
+  color: #FFA000!important;
   padding-left: 25px;
 }
 
@@ -639,7 +652,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #4b8ef1;
+  color: #FFA000;
 }
 
 @media (max-width: 1200px) {
@@ -655,7 +668,7 @@ header
 @media (max-width: 992px) {
   .header-area .main-nav .nav li:last-child  ,
   .background-header .main-nav .nav li:last-child {
-    color: #069;
+    color: #FFA000;
   }
   .header-area .main-nav .nav li:nth-child(6),
   .background-header .main-nav .nav li:nth-child(6) {
@@ -679,7 +692,7 @@ header
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #4b8ef1!important;
+    color: #FFA000!important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -741,7 +754,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #4b8ef1!important;
+    color: #FFA000!important;
   }
   .header-area .main-nav .nav li.submenu ul {
     position: relative;
@@ -855,7 +868,7 @@ preloader
     height: 16px;
     top: 12px;
     left: 15px;
-    background: #4b8ef1;
+    background: #FFA000;
     border-radius: 50%;
     -webkit-transform: translateX(0);
     transform: translateX(0);
@@ -878,7 +891,7 @@ preloader
     width: 16px;
     height: 16px;
     margin-left: 16px;
-    background: #4b8ef1;
+    background: #FFA000;
     border-radius: 50%;
 }
 
@@ -901,7 +914,7 @@ Banner Style
 
 .main-banner:after {
   content: '';
-  background-image: url(../images/slider-left-dec.png);
+  background-image: url(../images/Untitled-2.png);
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
@@ -946,12 +959,16 @@ Banner Style
 }
 
 .main-banner .right-image img {
-  max-width: 710px;
+  max-width: 7100px;
 }
 
 .main-banner .left-content .white-button a {
-  background-color: #4b8ef1;
+  background-color: #FFA000;
   color: #fff !important;
+}
+
+.over {
+  color: #fff
 }
 
 /* 
@@ -970,6 +987,19 @@ Services Style
   margin-left: 18%;
   margin-right: 18%;
 }
+
+.services a:link {
+  color: #ffa000;
+}
+
+.services a:visited {
+  color: #ff5e00;
+}
+
+.services a:hover {
+  color: #955f01;
+}
+
 
 .services .container-fluid {
   padding-left: 65px;
@@ -1135,7 +1165,7 @@ About Us
 }
 
 .about-us .box-item:hover h4 a {
-  color: #4b8ef1;
+  color: #ffa000;
 }
 
 .about-us .gradient-button {
@@ -1231,7 +1261,7 @@ The Clients
 .the-clients .naccs .menu div.active i,
 .the-clients .naccs .menu div.active span.rating,
 .the-clients .naccs .menu div.active .thumb {
-  color: #4b8ef1;
+  color: #ffa000;
 }
 
 .the-clients ul.nacc {
@@ -1390,7 +1420,7 @@ The Clients
 }
 
 .pricing-item-regular ul li {
-  color: #4b8ef1;
+  color: #000000;
   font-size: 15px;
   margin-bottom: 15px;
 }
@@ -1467,7 +1497,7 @@ The Clients
 }
 
 .pricing-item-pro ul li {
-  color: #4b8ef1;
+  color: #000000;
   font-size: 15px;
   margin-bottom: 15px;
 }
@@ -1558,7 +1588,7 @@ Free Quote
   outline: none;
   border: none;
   margin-left: 30px;
-  background-color: #726ae3;
+  background-color: #fa8736;
   font-size: 15px;
   color: #fff;
 }
@@ -1623,7 +1653,7 @@ footer #search button {
 
 footer #search button:hover {
   background-color: #fff;
-  color: #4b8ef1;
+  color: #ffa000;
 }
 
 .footer-widget .logo img {
@@ -1718,13 +1748,13 @@ PopUp
 
 .btn {
   padding: 10px 20px;
-  background: #4b8ef1;
+  background: #ffa000;
   color: #fff;
   transition: all .3s;
 }
 
 .btn_red {
-  background: #4b8ef1;
+  background: #ffa000;
   color: #FFF;
 }
 
@@ -1777,7 +1807,7 @@ a.btn_red {
   right: 0;
   top: 0;
   padding: 10px 15px;
-  background: #4b8ef1;
+  background: #ffa000;
   cursor: pointer;
   color: #fff;
   font-size: 16px;
@@ -1812,7 +1842,7 @@ a.btn_red {
 }
 
 .social_login .google .icon {
-  background: #DD4B39;
+  background: #5739dd;
 }
 
 .social_login .icon_title {
@@ -1893,7 +1923,7 @@ a.btn_red {
   clear: both;
   overflow: hidden;
   text-decoration: none;
-  color: #4b8ef1;
+  color: #ffa000;
   transition: all .3s;
 }
 /* User Register Form */
@@ -1988,7 +2018,7 @@ responsive
     margin-right: 0;
   }
   .main-banner .left-content .white-button a {
-    background-color: #4b8ef1;
+    background-color: #ffa000;
     color: #fff !important;
   }
   form#contact {
@@ -2114,7 +2144,7 @@ responsive
   }
   footer #search button {
     background-color: #fff;
-    color: #4b8ef1;
+    color: #ffa000;
   }
   footer #search input::placeholder { 
     color: #2a2a2a;
